# WathergovApp

./: .gitattributes  .gitignore  Dockerfile  README.md  pyproject.toml  pyproject_backup.toml
notebooks/: 1. Get all stations.ipynb  2. Historical data by time.ipynb  3. Lua command to work with sorted set.ipynb  4. Getting RT data from weather endpoint.ipynb
scripts/: run_redis.sh
scripts/python/: check_enum.py  check_redis_connection.py  enum_iterator.py  redis_check_timeseries.py  redis_get_multiple_ts.py  redis_get_station_hash.py
src/weathergov/: constants.py  main.py  run_app.py
src/weathergov/app/: components.py  constants.py  layout.py  viz.py  webapp.py
src/weathergov/objects/: station.py
src/weathergov/scripts/: data_dumper.py  loaders.py
src/weathergov/utils/: logging_utils.py  redis_utils.py  stations_utils.py
